@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r3-pre19
+  {
+    Modules = LHCbDIRAC:v9r3-pre19, LHCbWebDIRAC:v4r5p2
+    Depends = DIRAC:v6r21-pre8
+    LcgVer = v14r9
+  }
+
   v9r3-pre18
   {
     Modules = LHCbDIRAC:v9r3-pre18, LHCbWebDIRAC:v4r5p2
