@@ -1,3 +1,14 @@
+[v9r3-pre19]
+use DIRAC v6r21-pre8
+
+* correct accounting plots
+* porting all the releases
+* removed boinc
+* removed non-working tests
+* SQLDDBv7r10 -> Det/SQLDDBv7r11
+* restore InputData optimizer
+* fix for DownloadInputData missing in parameters
+
 [v9r3-pre18]
 use DIRAC v6r21-pre8
 
